[gd_scene load_steps=8 format=3 uid="uid://bufqtg00bvtxn"]

[ext_resource type="Script" path="res://GameFolder/Scenes/menu.gd" id="1_0nvuh"]
[ext_resource type="VideoStream" path="res://video/PortadaOGV_EXT.ogv" id="2_xqjno"]
[ext_resource type="Texture2D" uid="uid://ckkn7omu1it41" path="res://assetsGodot/UI/Button Pack - ok_lavender/Individual Frames/[6] Silver/[1] Normal.png" id="3_5yly4"]
[ext_resource type="Texture2D" uid="uid://c0ib5n0mgq58n" path="res://assetsGodot/UI/Button Pack - ok_lavender/Individual Frames/[6] Silver/[2] Clicked.png" id="4_ed3w4"]
[ext_resource type="Texture2D" uid="uid://dtj2g0dudhk4g" path="res://assetsGodot/UI/Button Pack - ok_lavender/Individual Frames/[6] Silver/[3] Hover.png" id="5_ocv4s"]

[sub_resource type="FontFile" id="FontFile_8k16r"]
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/17/0/ascent = 0.0
cache/0/17/0/descent = 0.0
cache/0/17/0/underline_position = 0.0
cache/0/17/0/underline_thickness = 0.0
cache/0/17/0/scale = 1.0
cache/0/18/0/ascent = 0.0
cache/0/18/0/descent = 0.0
cache/0/18/0/underline_position = 0.0
cache/0/18/0/underline_thickness = 0.0
cache/0/18/0/scale = 1.0
cache/0/19/0/ascent = 0.0
cache/0/19/0/descent = 0.0
cache/0/19/0/underline_position = 0.0
cache/0/19/0/underline_thickness = 0.0
cache/0/19/0/scale = 1.0
cache/0/20/0/ascent = 0.0
cache/0/20/0/descent = 0.0
cache/0/20/0/underline_position = 0.0
cache/0/20/0/underline_thickness = 0.0
cache/0/20/0/scale = 1.0
cache/0/21/0/ascent = 0.0
cache/0/21/0/descent = 0.0
cache/0/21/0/underline_position = 0.0
cache/0/21/0/underline_thickness = 0.0
cache/0/21/0/scale = 1.0
cache/0/22/0/ascent = 0.0
cache/0/22/0/descent = 0.0
cache/0/22/0/underline_position = 0.0
cache/0/22/0/underline_thickness = 0.0
cache/0/22/0/scale = 1.0
cache/0/23/0/ascent = 0.0
cache/0/23/0/descent = 0.0
cache/0/23/0/underline_position = 0.0
cache/0/23/0/underline_thickness = 0.0
cache/0/23/0/scale = 1.0
cache/0/24/0/ascent = 0.0
cache/0/24/0/descent = 0.0
cache/0/24/0/underline_position = 0.0
cache/0/24/0/underline_thickness = 0.0
cache/0/24/0/scale = 1.0
cache/0/25/0/ascent = 0.0
cache/0/25/0/descent = 0.0
cache/0/25/0/underline_position = 0.0
cache/0/25/0/underline_thickness = 0.0
cache/0/25/0/scale = 1.0
cache/0/26/0/ascent = 0.0
cache/0/26/0/descent = 0.0
cache/0/26/0/underline_position = 0.0
cache/0/26/0/underline_thickness = 0.0
cache/0/26/0/scale = 1.0
cache/0/27/0/ascent = 0.0
cache/0/27/0/descent = 0.0
cache/0/27/0/underline_position = 0.0
cache/0/27/0/underline_thickness = 0.0
cache/0/27/0/scale = 1.0
cache/0/28/0/ascent = 0.0
cache/0/28/0/descent = 0.0
cache/0/28/0/underline_position = 0.0
cache/0/28/0/underline_thickness = 0.0
cache/0/28/0/scale = 1.0
cache/0/29/0/ascent = 0.0
cache/0/29/0/descent = 0.0
cache/0/29/0/underline_position = 0.0
cache/0/29/0/underline_thickness = 0.0
cache/0/29/0/scale = 1.0
cache/0/30/0/ascent = 0.0
cache/0/30/0/descent = 0.0
cache/0/30/0/underline_position = 0.0
cache/0/30/0/underline_thickness = 0.0
cache/0/30/0/scale = 1.0
cache/0/31/0/ascent = 0.0
cache/0/31/0/descent = 0.0
cache/0/31/0/underline_position = 0.0
cache/0/31/0/underline_thickness = 0.0
cache/0/31/0/scale = 1.0
cache/0/32/0/ascent = 0.0
cache/0/32/0/descent = 0.0
cache/0/32/0/underline_position = 0.0
cache/0/32/0/underline_thickness = 0.0
cache/0/32/0/scale = 1.0
cache/0/33/0/ascent = 0.0
cache/0/33/0/descent = 0.0
cache/0/33/0/underline_position = 0.0
cache/0/33/0/underline_thickness = 0.0
cache/0/33/0/scale = 1.0
cache/0/60/0/ascent = 0.0
cache/0/60/0/descent = 0.0
cache/0/60/0/underline_position = 0.0
cache/0/60/0/underline_thickness = 0.0
cache/0/60/0/scale = 1.0
cache/0/80/0/ascent = 0.0
cache/0/80/0/descent = 0.0
cache/0/80/0/underline_position = 0.0
cache/0/80/0/underline_thickness = 0.0
cache/0/80/0/scale = 1.0
cache/0/79/0/ascent = 0.0
cache/0/79/0/descent = 0.0
cache/0/79/0/underline_position = 0.0
cache/0/79/0/underline_thickness = 0.0
cache/0/79/0/scale = 1.0
cache/0/78/0/ascent = 0.0
cache/0/78/0/descent = 0.0
cache/0/78/0/underline_position = 0.0
cache/0/78/0/underline_thickness = 0.0
cache/0/78/0/scale = 1.0
cache/0/77/0/ascent = 0.0
cache/0/77/0/descent = 0.0
cache/0/77/0/underline_position = 0.0
cache/0/77/0/underline_thickness = 0.0
cache/0/77/0/scale = 1.0
cache/0/76/0/ascent = 0.0
cache/0/76/0/descent = 0.0
cache/0/76/0/underline_position = 0.0
cache/0/76/0/underline_thickness = 0.0
cache/0/76/0/scale = 1.0
cache/0/75/0/ascent = 0.0
cache/0/75/0/descent = 0.0
cache/0/75/0/underline_position = 0.0
cache/0/75/0/underline_thickness = 0.0
cache/0/75/0/scale = 1.0
cache/0/74/0/ascent = 0.0
cache/0/74/0/descent = 0.0
cache/0/74/0/underline_position = 0.0
cache/0/74/0/underline_thickness = 0.0
cache/0/74/0/scale = 1.0
cache/0/73/0/ascent = 0.0
cache/0/73/0/descent = 0.0
cache/0/73/0/underline_position = 0.0
cache/0/73/0/underline_thickness = 0.0
cache/0/73/0/scale = 1.0
cache/0/72/0/ascent = 0.0
cache/0/72/0/descent = 0.0
cache/0/72/0/underline_position = 0.0
cache/0/72/0/underline_thickness = 0.0
cache/0/72/0/scale = 1.0
cache/0/71/0/ascent = 0.0
cache/0/71/0/descent = 0.0
cache/0/71/0/underline_position = 0.0
cache/0/71/0/underline_thickness = 0.0
cache/0/71/0/scale = 1.0
cache/0/70/0/ascent = 0.0
cache/0/70/0/descent = 0.0
cache/0/70/0/underline_position = 0.0
cache/0/70/0/underline_thickness = 0.0
cache/0/70/0/scale = 1.0
cache/0/69/0/ascent = 0.0
cache/0/69/0/descent = 0.0
cache/0/69/0/underline_position = 0.0
cache/0/69/0/underline_thickness = 0.0
cache/0/69/0/scale = 1.0
cache/0/68/0/ascent = 0.0
cache/0/68/0/descent = 0.0
cache/0/68/0/underline_position = 0.0
cache/0/68/0/underline_thickness = 0.0
cache/0/68/0/scale = 1.0
cache/0/67/0/ascent = 0.0
cache/0/67/0/descent = 0.0
cache/0/67/0/underline_position = 0.0
cache/0/67/0/underline_thickness = 0.0
cache/0/67/0/scale = 1.0
cache/0/66/0/ascent = 0.0
cache/0/66/0/descent = 0.0
cache/0/66/0/underline_position = 0.0
cache/0/66/0/underline_thickness = 0.0
cache/0/66/0/scale = 1.0
cache/0/65/0/ascent = 0.0
cache/0/65/0/descent = 0.0
cache/0/65/0/underline_position = 0.0
cache/0/65/0/underline_thickness = 0.0
cache/0/65/0/scale = 1.0
cache/0/64/0/ascent = 0.0
cache/0/64/0/descent = 0.0
cache/0/64/0/underline_position = 0.0
cache/0/64/0/underline_thickness = 0.0
cache/0/64/0/scale = 1.0
cache/0/63/0/ascent = 0.0
cache/0/63/0/descent = 0.0
cache/0/63/0/underline_position = 0.0
cache/0/63/0/underline_thickness = 0.0
cache/0/63/0/scale = 1.0
cache/0/62/0/ascent = 0.0
cache/0/62/0/descent = 0.0
cache/0/62/0/underline_position = 0.0
cache/0/62/0/underline_thickness = 0.0
cache/0/62/0/scale = 1.0
cache/0/61/0/ascent = 0.0
cache/0/61/0/descent = 0.0
cache/0/61/0/underline_position = 0.0
cache/0/61/0/underline_thickness = 0.0
cache/0/61/0/scale = 1.0

[sub_resource type="LabelSettings" id="LabelSettings_sfbsu"]
font = SubResource("FontFile_8k16r")
font_size = 60
font_color = Color(0.04, 0.04, 0.04, 1)

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0nvuh")

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="."]
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0
stream = ExtResource("2_xqjno")
autoplay = true
loop = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -183.5
offset_top = -95.5
offset_right = 183.5
offset_bottom = 95.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 36

[node name="TextureButton" type="TextureButton" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
texture_normal = ExtResource("3_5yly4")
texture_pressed = ExtResource("4_ed3w4")
texture_hover = ExtResource("5_ocv4s")
stretch_mode = 0

[node name="Label" type="Label" parent="VBoxContainer/TextureButton"]
custom_minimum_size = Vector2(1, 1)
layout_mode = 0
offset_left = 160.5
offset_top = -20.0
offset_right = 210.5
offset_bottom = 88.0
text = "Jugar
"
label_settings = SubResource("LabelSettings_sfbsu")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="TextureButton2" type="TextureButton" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
texture_normal = ExtResource("3_5yly4")
texture_pressed = ExtResource("4_ed3w4")
texture_hover = ExtResource("5_ocv4s")
stretch_mode = 0

[node name="Label" type="Label" parent="VBoxContainer/TextureButton2"]
custom_minimum_size = Vector2(1, 1)
layout_mode = 0
offset_left = 160.5
offset_top = -20.0
offset_right = 210.5
offset_bottom = 88.0
text = "Salir
"
label_settings = SubResource("LabelSettings_sfbsu")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="TextureButton3" type="TextureButton" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
texture_normal = ExtResource("3_5yly4")
texture_pressed = ExtResource("4_ed3w4")
texture_hover = ExtResource("5_ocv4s")
stretch_mode = 0

[node name="Label" type="Label" parent="VBoxContainer/TextureButton3"]
custom_minimum_size = Vector2(1, 1)
layout_mode = 0
offset_left = 160.5
offset_top = -20.0
offset_right = 210.5
offset_bottom = 88.0
text = "Opciones
"
label_settings = SubResource("LabelSettings_sfbsu")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[connection signal="pressed" from="VBoxContainer/TextureButton" to="." method="_on_texture_button_pressed"]
[connection signal="pressed" from="VBoxContainer/TextureButton2" to="." method="_on_texture_button_exit_pressed"]
[connection signal="pressed" from="VBoxContainer/TextureButton3" to="." method="_on_texture_Options_pressed"]
